app/assets/stylesheets/forms.scss
input[type="radio"],
input[type="checkbox"] {
  position: relative;
  top: 2px;
}

[type="submit"] {
  @include box-sizing(content-box);
}

.btn {
  height: $baseLineHeight;
}

.controls input[type="file"] {
  cursor: pointer;
  margin-bottom: $baseLineHeight/2;
}

.btn-primary,
.btn-info,
.btn-success,
.btn-warning,
.btn-danger,
.btn-inverse {
  font-weight: $regular;
}

.btn-group {
  .edit_item {
    z-index: 0 !important;
  }
}

.btn-toolbar {
  span {
    vertical-align: middle;
    font-size: $baseFontSize;
  }
}

textarea {
  @include input-block-level;
  height: $inputHeight;
  resize: vertical;
}

input,
.uneditable-input {
  width: 25em;
}

.alert.no-close {
  display: inline-block;
  margin-bottom: $baseLineHeight/2;
  padding-right: $baseLineHeight/2;

  .close { display: none; }
}

.form-inline {
  .controls,
  ol, ul, li,
  .btn-toolbar {
    display: inline-block;
    margin: 0;
  }

  .controls {
    margin-right: 8px;
  }
}

textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input {
  // Focus state
  &:focus {
    border-color: rgba(black,.4);
    @include box-shadow((inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(black,.15)));
  }
}

input,
textarea,
select,
button {
  font-weight: inherit;
}

.dropdown-menu li > a {
  font-weight: inherit;
}

.control-group {
  margin-bottom: 0;
  + .form_controls {
    margin-top: $baseLineHeight/2;
  }
}

label {
  display: inline-block;
  cursor: pointer;
  font-weight: inherit;
}

.control-group {
  .help-block,
  .error-block {
    &:first-child {
      margin-bottom: 0;
      font-size: $fontSizeSmall;
    }

    &:nth-child(n+2) {
      margin-top: - $baseLineHeight/2;
      font-size: $fontSizeSmall;
    }
  }

  &.error {
    .help-block { color: rgba(black, .5); }
  }
}

.help-block {
  color: rgba(black, .5);
}

.error-block {
  color: $errorText;
}

form {
  ol, ul {
    @extend %unstyled-list;
  }
  .btn-toolbar {
    span { margin-left: .5em; }
  }
}

// modals

.modal-backdrop {
  background: rgba(black, .5);
}

.modal-header {
  h1 {
    margin: 0;
    font-size: 36px;
    line-height: 42px;

    &.text-success,
    &.text-error {
      i {
        position: relative;
        top: 2px;
      }
    }
  }
}

.modal-body {
  :last-child {
    margin-bottom: 0;
  }
}

.modal-footer {
  form,
  .btn-toolbar,
  .btn-group {
    margin: 0;
  }
}

// tooltips

.tooltip {
  font-family: $smallFontFamily;
  font-size: 13px;
}

// popovers

.popover {
  width: auto;
}

.popover-title {
  text-transform: none;
  letter-spacing: 0;
  font-size: 20px;
  font-weight: 500;
}

// loader

.spinner {
  position: fixed !important;
}

